# framework.uifw.e17-misc-wearable

./: AUTHORS  Makefile.am  configure.ac  e17-misc-wearable.manifest  project.config
arm/: Makefile.am
arm/usr/: Makefile.am
arm/usr/share/: Makefile.am
arm/usr/share/enlightenment/config/e/backgrounds/: DM_Wallpaper03.edj
arm/usr/share/enlightenment/config/e/config/: Makefile.am  profile.src
arm/usr/share/enlightenment/config/e/config/tizen/: Makefile.am  e.src  module.comp-tizen.src  module.illume2-tizen.src  module.move-tizen.src
arm/usr/share/enlightenment/data/themes/: Makefile.am
arm/usr/share/enlightenment/data/themes/images/: Makefile.am
i386/usr/share/enlightenment/: Makefile.am
i386/usr/share/enlightenment/config/: Makefile.am
i386/usr/share/enlightenment/config/apps/launcher/: config.eet
i386/usr/share/enlightenment/config/e/config/: Makefile.am
i386/usr/share/enlightenment/config/e/config/tizen/: Makefile.am  e.src  exehist.src  module.comp-tizen.src  module.devicemgr-tizen.src  module.move-tizen.src
i386/usr/share/enlightenment/data/themes/: Makefile.am  tizen.edc
packaging/: e17-misc-wearable.spec
scripts/: wmrc
