MAINTAINERCLEANFILES = Makefile.in
EXTRA_DIST = \
base_bg.png \
bd_bottom.png \
bd_button_close_focused.png \
bd_button_close_shadow.png \
bd_button_close_unfocused.png \
bd_button_max_focused.png \
bd_button_max_shadow.png \
bd_button_max_unfocused.png \
bd_button_min_focused.png \
bd_button_min_shadow.png \
bd_button_min_unfocused.png \
bd_resize_b.png \
bd_title_bg.png \
bd_title_over.png \
bd_top.png \
bd_top_hilight.png \
bt_base1.png \
bt_base2.png \
bt_dis_base.png \
bt_dis_hilight.png \
bt_dis_shine.png \
bt_glow.png \
bt_hilight.png \
bt_shine.png \
bt_sm_base1.png \
bt_sm_hilight.png \
bt_sm_shine.png \
busy-1.png \
busy-2.png \
busy-3.png \
busy-4.png \
busy-5.png \
busy-6.png \
busy-7.png \
busy-8.png \
busy-9.png \
check_base.png \
check_on.png \
check_sel.png \
dia_botshad.png \
dia_grad.png \
dia_topshad.png \
exclam.png \
frame_1.png \
frame_2.png \
gadman_border.png \
gadman_bottom.png \
gadman_frame.png \
gadman_left.png \
gadman_right.png \
gadman_top.png \
icon_active.png \
icon_left_arrow.png \
icon_right_arrow.png \
icon_win_move.png \
icon_win_resize.png \
ilist_1.png \
ilist_2.png \
ilist_header_1.png \
ilist_header_2.png \
ilist_item_shadow.png \
inset_raised.png \
inset_sunk.png \
inset_sunk_dark.png \
menu_arrow_normal.png \
menu_arrow_sel.png \
menu_sel_bg.png \
menu_sel_fg.png \
menu_sep.png \
radio_base.png \
radio_on.png \
radio_sel.png \
sb_runnerh.png \
sb_runnerv.png \
sb_thumb.png \
shelf_alt_bg.png \
shelf_alt_over.png \
shelf_alt_shine.png \
shelf_alt_vert_bg.png \
slider.png \
slider_clicked.png \
toolbar_sel.png

